<resources>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Otsikot -->
    <string name="app_name">MobiiliProjekti</string>
    <string name="otsikkoPaasivu">HyvinVointia paskoihin päiviin!</string>
    <string name="otsikkoEtusivu">Tervetuloa!\nHyvinVointi Appsi v0.1</string>
    <string name="otsikkoAsetukset">Asetukset</string>
    <string name="otsikkoVesi">Veden juominen</string>
    <string name="otsikkoFiilis">Fiilis tänään</string>
    <string name="otsikkoUni">Kuinka nukuin</string>

    <!-- Muita -->
    <string name="kirjaudu">Kirjaudu</string>
    <string name="luotunnus">Luo\n\nkäyttäjätunnus</string>
    <string name="salasana">Salasana</string>
    <string name="salasana2">Salasana uudestaan</string>
    <string name="salasanatext">Salasana:</string>
    <string name="tunnustext">Tunnus:</string>
    <string name="tunnus">Tunnus</string>
    <string name="tallenna1">Tallenna</string>
    <string name="vesi">Veden juonti</string>
    <string name="vesimaara">Vettä juotu tänään:</string>
    <string name="vesitavoite">Tavoite:</string>
    <string name="vesilisa">join vettä</string>
    <string name="asetukset">Asetukset</string>
    <string name="fiilisOhje">Mikä fiilis tänään?</string>
    <string name="progohje">Tänään juotu</string>
    <string name="vesimaaraohje">Paljonko joit?</string>
    <string name="vesitavoiteohje">Päivittäinen tavoite</string>
    <string name="ml">ml</string>
    <string name="uniohje">Kauanko nukuit?</string>
    <string name="asetuksetohje">Valitse mitä pääsivulla näytetään</string>
    <string name="logout">Loggaa ulos</string>
    <string name="otsikkoTehtavalista">Tehtävä lista</string>
    <string name="otsikkoPaivakirja">Päiväkirja</string>
    <string name="uusimerkinta">Uusi merkintä</string>
    <string name="unitavoiteohje">Kauanko haluat nukkua?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Takaisin</string>
    <string name="home">Pääsivu</string>
    <string name="settings">Asetukset</string>
    <string name="edit1">Muokkaa</string>
    <string name="koti">Koti</string>
    <string name="takaisin">Takaisin</string>
    <string name="reg">Uusi käyttäjä</string>
    <string name="otsikkoEditPaivakirja">Muokkaa päiväkirjaa</string>
    <string name="peruuta1">Peruuta</string>
    <string name="otsikkoEmpty">Tyhjä pohja</string>
    <string name="otsikkoJumppa">Jumppa</string>
    <string name="jumppateksti1">Aamu jumppa 15min</string>
    <string name="poista1">Poista</string>
    <string name="paluu1">Takaisin</string>
    <string name="fiilistanaan">Päivän kokonaisfiilis:</string>
    <string name="jumppateksti2">Koko kehon venyttely 12min</string>
    <string name="jumppateksti3">Koko kehon treeni 20min</string>
    <string name="jumppateksti4">Core treeni 20min</string>
    <string name="jumppaohje">Liikuttu tänään</string>
    <string name="uusitehtava">Uusi tehtävä</string>
    <string name="fiilisd1">Eilinen fiilis</string>
    <string name="fiilisd2">Toissapäiväinen fiilis</string>
    <string name="fiilisd3">Fiilis 3 päivää sitten</string>
    <string name="fiilisd4">Fiilis 4 päivää sitten</string>
    <string name="fiilisd5">Fiilis 5 päivää sitten</string>
    <string name="fiilisd6">Fiilis 6 päivää sitten</string>
    <string name="fiilisd7">Fiilis 7 päivää sitten</string>

</resources>