<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/otsikkoEtusivu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/otsikkoEtusivu"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tunnus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otsikkoEtusivu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/tunnustext"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tunnusEdit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/tunnus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/kulmat"
        android:hint="@string/tunnus"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/harmaa" />

    <TextView
        android:id="@+id/salasana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tunnusEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/salasanatext"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/salasanaEdit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/salasana"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/kulmat"
        android:hint="@string/salasana"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/harmaa" />

    <Button
        android:id="@+id/buttonKirjaudu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/salasanaEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/harmaa"
        android:paddingHorizontal="40dp"
        android:paddingVertical="15dp"
        android:text="@string/kirjaudu"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonRek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonKirjaudu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/harmaa"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:text="@string/luotunnus"
        android:textSize="15sp" />

</RelativeLayout>