<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    tools:context=".MainVesi">

    <TextView
        android:id="@+id/otsikkoVesi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/otsikkoVesi"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/progOhje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otsikkoVesi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/progohje"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/vesiJuotu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progOhje"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="0"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/vesiProg"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:scaleY="8"
        android:layout_below="@+id/vesiJuotu"
        android:layout_centerHorizontal="true"
        android:max="100"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/vesiMaaraOhje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vesiProg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/vesimaaraohje"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/vesiMaara"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/vesiMaaraOhje"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/vesiMaaraMl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vesiMaaraOhje"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/vesiMaara"
        android:text="@string/ml"
        android:textSize="25sp" />

    <Button
        android:id="@+id/tallennaVesi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vesiMaara"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="15dp"
        android:text="@string/tallenna1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/vesiTavoiteOhje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tallennaVesi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/vesitavoiteohje"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/vesiTavoiteMaara"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/vesiTavoiteOhje"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/vesiTavoiteMl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vesiTavoiteOhje"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/vesiTavoiteMaara"
        android:text="@string/ml"
        android:textSize="25sp" />


</RelativeLayout>