<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    tools:context=".EmptyTemplate">

    <!--TODO otsikkoJotakin-->
    <TextView
        android:id="@+id/otsikkoEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/otsikkoEmpty"
        android:textSize="15sp"
        android:translationZ="15dp" />

    <LinearLayout
        android:id="@+id/valikko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otsikkoEmpty"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/takaisin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@null"
            android:contentDescription="@string/takaisin"
            android:scaleType="fitCenter"
            android:src="@drawable/back"
            android:translationZ="10dp" />

        <ImageButton
            android:id="@+id/koti"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="100dp"
            android:background="@null"
            android:contentDescription="@string/koti"
            android:scaleType="fitCenter"
            android:src="@drawable/home"
            android:translationZ="10dp" />

        <ImageButton
            android:id="@+id/asetukset"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@null"
            android:contentDescription="@string/asetukset"
            android:scaleType="fitCenter"
            android:src="@drawable/settings"
            android:translationZ="10dp" />

    </LinearLayout>

    <!--TODO nämä koodit kopiodaan uuteen pohjaa-->
    <!--TODO tähän väliin omat koodit-->

</RelativeLayout>